--- a/app/frontend/src/components/LogOutButton/LogOutButton.css
+++ b/app/frontend/src/components/LogOutButton/LogOutButton.css
@@ -1,4 +1,6 @@
-.pos-container .btn {
+
+
+.log-out-btn {
     background-color: #0b5ed7;
     border: 5px;
     color: #0f5132;
@@ -12,7 +14,7 @@
     transition-duration: 0.4s;
 }
 
-.btn:hover {
+.log-out-btn:hover {
     background-color: #0a53be;
     color: white;
     border: 2px solid #4CAF50;
