--- a/app/frontend/src/components/Login/Login.css
+++ b/app/frontend/src/components/Login/Login.css
@@ -3,8 +3,8 @@
     padding: 16px;
     background-color: white;
     margin: 100px auto 0;
-    border: 1px solid black;
-    border-radius: 4px;
+    border: 5px solid black;
+    border-radius: 25px;
 }
 
 input[type=text], input[type=password] {
@@ -12,8 +12,9 @@ input[type=text], input[type=password] {
     padding: 15px;
     margin: 5px 0 22px 0;
     display: inline-block;
-    border: none;
+    border: 1px black;
     background: #f1f1f1;
+    border-radius: 25px;
 }
 
 input[type=text]:focus, input[type=password]:focus {
@@ -32,6 +33,8 @@ input[type=text]:focus, input[type=password]:focus {
     opacity: 0.9;
     display: flex;
     align-items: center;
+    border-radius: 25px;
+    border: 3px black;
 }
 
 .btn:hover {
