--- a/app/frontend/src/pages/LoginPage/LoginPage.css
+++ b/app/frontend/src/pages/LoginPage/LoginPage.css
@@ -1,10 +1,11 @@
-.LoginPage{
+.login-page{
     width: 300px;
-    height: 300px;
+    height: 325px;
     padding: 10px;
-    border: 1px solid black;
+    border: 3px solid black;
     background-color: lightblue;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 25px;
 }
