--- a/app/frontend/src/components/SaleItem/SaleItem.css
+++ b/app/frontend/src/components/SaleItem/SaleItem.css
@@ -1,19 +1,29 @@
 .pos-container .btn {
+    height: 100px;
+    width: 100px;
     background-color: #0b5ed7;
-    border: 5px;
-    color: #0f5132;
-    padding: 15px 32px;
+    border: none;
+    color: white;
+    padding: 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
+    line-height: 1.9;
+    font-size: 20px;
+    font-weight: 700;
+    margin: 10px;
+    border-radius: 15px;
     cursor: pointer;
     transition-duration: 0.4s;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .btn:hover {
     background-color: #0a53be;
     color: white;
     border: 2px solid #4CAF50;
+    box-shadow: 0 12px 20px 0 rgba(0,0,0,0.3);
 }
