--- a/app/frontend/src/pages/Checkout/Checkout.css
+++ b/app/frontend/src/pages/Checkout/Checkout.css
@@ -1,3 +1,62 @@
-.checkout{
+.checkout {
+    width: 700px;
+    height: 475px;
+    padding: 10px;
+    color: #6f42c1;
+    border: 1px solid black;
+    background-color: lightblue;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+    vertical-align: center;
+}
 
+.checkout h1 {
+    margin-bottom: 2rem;
+    font-size: 2.5rem;
+    color: #333;
+}
+
+.checkout input {
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+
+.checkout label{
+    padding: 0.5rem 0.75rem;
+    font-size: 2.5rem;
+    color: #333;
+    font-weight: bold;
+}
+
+.checkout button {
+    padding: 0.75rem 1.5rem;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.checkout button:first-child {
+    background-color: #2ecc71;
+    margin-bottom: 1rem;
+}
+
+.checkout button:first-child:hover {
+    background-color: #27ae60;
+}
+
+.checkout button:last-child {
+    background-color: #3498db;
+}
+
+.checkout button:last-child:hover {
+    background-color: #2980b9;
 }
