--- a/app/frontend/src/components/CartText/CartText.css
+++ b/app/frontend/src/components/CartText/CartText.css
@@ -2,7 +2,7 @@
     height: 175px;
     width: 130px;
     overflow: auto;
-    background-color: white;
+    background-color: #4087e8;
     border: 5px;
     color: #0f5132;
     padding: 5px 20px;
@@ -12,4 +12,32 @@
     font-size: 16px;
     margin: 4px 2px;
     position: relative;
+}
+
+.cart-list {
+    list-style-type: none;
+    padding-left: 0;
+    color: #0a58ca;
+}
+
+.cart-item {
+    padding: 5px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    background-color: #ffffff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
+    height: 60px;
+}
+
+.item-name,
+.item-price {
+    display: block;
+}
+
+.item-name {
+    font-weight: bold;
+}
+
+.item-price {
+    color: #707070;
 }
